# so_long

./: .gitignore  .test.c.swp  200x200.xpm  CMakeLists.txt  Makefile  a.out  in_out.sh  main.c  so_long
docker/: Dockerfile  Makefile  get_next_line_bonus.c  get_next_line_bonus.h  main.c
img/: capy_64.xpm  cat_sprite1_64.xpm  cat_sprite3_64.xpm  cat_sprite4_64.xpm  coin_64.xpm  fish_64.xpm  grass.xpm  grass_64.xpm  jumping_cat.xpm  open_wooden_door.xpm  shrimp_64.xpm  stairs_64.xpm  still_cat.xpm  walls.xpm  wooden.xpm  wooden_door.xpm
includes/: get_next_line_bonus.h  so_long.h
maps/: map  map_0.ber  map_1.ber  map_2.ber  map_4.ber  map_5.ber  map_6.ber  map_7.ber  map_8.ber  map_9.ber  test
src/: .get_next_line_bonus.c.swp  check_if_map.c  create_map.c  draw_map.c  draw_player.c  free.c  ft_strdup.c  get_next_line_bonus.c  get_next_line_bonus.h  init_map.c  main.c  manage_hook.c  manage_map.c  manage_player.c  move_player.c  util1.c
src/LIBFT/: .gitignore  Makefile  ft_calloc.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_memset.c  ft_putstr_fd.c  ft_strdup.c  ft_strjoin.c  ft_strnstr.c  ft_substr.c  libft.h
src/LIBFT/ft_libft/: Makefile  ft_atoi.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_split.c  (+19 more)
src/libft/: .gitignore  Makefile  ft_atoi.c  ft_bzero.c  ft_isalpha.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_strchr.c  ft_strdup.c  ft_substr.c  ft_tolower.c  libft.h  libft.h.gch
(+26 files in other folders)
